Updated Log tab UI to prevent button highlights from being truncated.

--- a/Nucleus.Web/Resources/css/shared.css
+++ b/Nucleus.Web/Resources/css/shared.css
@@ -35,6 +35,11 @@ body
   font-size: 0.8rem;
 }
 
+.m-minus1
+{
+  margin: -0.25rem;
+}
+
 .btn label span
 {
   vertical-align: text-top;
